--- a/demo.html
+++ b/demo.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="utf-8">
     <title>Brywidgets demo</title>
-    <script src="brython.js"></script>
-    <script src="brython_stdlib.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/brython@3.8.8/brython.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/brython@3.8.8/brython_stdlib.js"></script>
     <script type="text/python" src="demo.py"></script>
     <link rel="stylesheet" href="demo.css" type="text/css" />
 </head>
